# teamclaw-client

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  testflight.yml
amux-api/: README.md
amux-api/supabase/: seed.sql
daemon/: .env.example  Cargo.toml  README.md  build.rs
daemon/src/: error.rs  main.rs  proto.rs
daemon/src/agent/: adapter.rs  handle.rs  manager.rs  mod.rs  models.rs
daemon/src/cli/: clear.rs  init.rs  invite.rs  members.rs  mod.rs  process.rs  test_client.rs
daemon/src/collab/: auth.rs  mod.rs  peers.rs  permissions.rs
daemon/src/config/: daemon_config.rs  member_store.rs  mod.rs  session_store.rs  workspace_store.rs
daemon/src/daemon/: mod.rs  server.rs
daemon/src/history/: mod.rs  store.rs
daemon/src/mqtt/: client.rs  mod.rs  publisher.rs  subscriber.rs  topics.rs
daemon/src/onboarding/: init.rs  invite_url.rs  mod.rs
daemon/src/runtime/: adapter.rs  handle.rs  manager.rs  mod.rs  turn_aggregator.rs
daemon/src/supabase/: client.rs  config.rs  error.rs  mod.rs
daemon/src/teamclaw/: idea_store.rs  live.rs  message_store.rs  mod.rs  notify.rs  rpc.rs  session_manager.rs  session_store.rs  task_store.rs  topics.rs  work_item_store.rs
daemon/tests/: teamclaw_mqtt_rearchitecture.rs
docs/plans/: 2026-04-18-tool-call-display.md
docs/specs/: 2026-04-18-session-resume-design.md  2026-04-18-session-resume-plan.md  (+1 more)
ios/: project.yml
ios/AMUX.xcodeproj/: project.pbxproj
mac/: project.yml
proto/: amux.proto  teamclaw.proto
scripts/: proto-gen-swift.sh  run-daemon.sh  run-ios.sh  run-mac.sh
(+65 files in other folders)
